# aoc-2024

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
day00/: part1.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
src/aoc_cli/: main.py
