[project]
name = "aoc-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
]

[project.scripts]
aoc = "aoc_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
# Global options:
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
allow_untyped_calls = false
allow_untyped_defs = false
check_untyped_defs = true
show_error_codes = true

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
force-single-line = true
